2008-05-21	Bryan Kadzban	<bryan@linuxfromscratch.org>
	* 81-firmware.rules, doc/81-firmware.txt: Remove.  This rule is
	  already handled by udev's 50-udev-default.rules file.  The docs
	  can be added back later if needed.
	* Makefile: Don't install the above deleted files.
	* 55-lfs.rules: Remove the device-mapper rule, since the upstream
	  50-udev-default.rules file handles it properly.

2008-04-02	Bryan Kadzban	<bryan@linuxfromscratch.org>
	* Makefile: Make the package DESTDIR-friendly by installing the docs
	  into a fixed $(PREFIX)/share/doc/udev-config directory, instead of
	  trying to figure out what version of udev was just installed.

2007-10-30	Bryan Kadzban	<bryan@linuxfromscratch.org>
	* 55-lfs.rules: Since the dialout group was renamed to uucp, delete
	  the rules that override upstream's assignment of the dialout group.
	  Replace "dialout" with "uucp" on the remaining rules.

2007-10-29	Bryan Kadzban	<bryan@linuxfromscratch.org>
	* 51-lfs.rules: Move to 55-lfs.rules.
	* doc/51-lfs.rules: Move to doc/55-lfs.rules.

2007-10-27	Bryan Kadzban	<bryan@linuxfromscratch.org>
	* 25-lfs.rules: Some rules in here are duplicates of rules from udev's
	  new 50-udev-defaults.rules file; remove them. Override permissions
	  where needed elsewhere (and document overrides in comments).
	* 26-modprobe.rules: Provided by udev's 80-drivers.rules and built-in
	  modaliases for SCSI device-type modules in 2.6.22+ kernels; remove.

	* 25-lfs.rules: Move to 51-lfs.rules.
	* 27-firmware.rules: Move to 81-firmware.rules.
	* 81-cdrom.rules: Move to 61-cdrom.rules.

	* doc/25-lfs.txt: Rename to 51-lfs.txt.
	* doc/26-modprobe.txt: Rename to 80-drivers.txt, and modify to reflect
	  the upstream rules.
	* doc/27-firmware.txt: Rename to 81-firmware.txt.
	* doc/81-cdrom.txt: Rename to 61-cdrom.txt.

	* Makefile: Use new filenames.

2007-07-31	Dan Nicholson <dnicholson@linuxfromscratch.org>
	* 25-lfs.rules: Changed the usb_device rule tto create /dev/bus/usb