@@ -38,8 +38,11 @@
 -->
 
     <listitem>
-      <para>2008-10-14</para>
+      <para>2008-10-15</para>
       <itemizedlist>
+        <listitem>
+          <para>[dj] - Updated to udev-config-20081015.</para>
+        </listitem>
         <listitem>
           <para>[dj] - Modified udev instructions following upstream
           recommendations.</para>
